apps/moonlight-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moonlight-web
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: ${default_cluster_issuer}
    external-dns.kubernetes.io/target: ${cloudflare_tunnel_hostname}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authelia-forwardauth-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: moonlight${public_host_suffix}.${delegating_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moonlight-web
                port:
                  name: http
  tls:
    - secretName: moonlight-web-tls
      hosts:
        - moonlight${public_host_suffix}.${delegating_domain}
